[gd_scene load_steps=2 format=3 uid="uid://bm1pieiusss1s"]

[ext_resource type="Script" path="res://ending_dialogue.gd" id="1_8u6ks"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -484.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8u6ks")

[node name="player_init_contact" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 495.0
offset_right = 435.0
offset_bottom = 559.0
bbcode_enabled = true
text = "[color=#89d1e9]You:
[color=#00000]\"Air Commodore Robins, this the Flight Sergeant, over\""

[node name="air_com_response" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 495.0
offset_right = 480.0
offset_bottom = 544.0
bbcode_enabled = true
text = "[color=#6499ab]Air Commodore Robins:[color=#00]
\"Flight Sergeant, this is Air Commodore Robins, over\""

[node name="resp_button" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 608.0
offset_right = 390.0
offset_bottom = 639.0
text = "\"Sir, I belive I've collected all rogue documents...\""

[node name="player_message" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 495.0
offset_right = 664.0
offset_bottom = 569.0
bbcode_enabled = true
text = "[color=#89d1e9]You:
[color=#00000]\"Sir, I belive I've collected all rogue documents and I've cleared a path to the bunker. Should I attempt to gain entry?\""

[node name="air_com_response_final" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 495.0
offset_right = 686.0
offset_bottom = 590.0
bbcode_enabled = true
text = "[color=#6499ab]Air Commodore Robins:[color=#00]
\"Roger, that's all copied, I'll pass that info onto the MP's.\"

\"Robins Out\"  "

[connection signal="pressed" from="resp_button" to="." method="_on_button_pressed"]
